--- a/main.css
+++ b/main.css
@@ -20,10 +20,13 @@
     font-family: Palatino Linotype;
     padding:10px;
     line-height:1.5;
-    border: 1px solid #ccc;
+    border: 1px solid #444;
     border-radius: 5px;
-    box-shadow:1.25px 1.25px 1.25px #222222;
+    box-shadow:1.25px 1.25px 1.25px #777;
     resize: none;
+    outline: none;
+    background-color:#222;
+    color:white;
 }
 
 #entertext {
@@ -41,4 +44,14 @@
 #output {
     position:relative;
     right:-16px;
+}
+
+#switch {
+    position: absolute;
+    right:21.5rem;
+    border-radius:20px;
+    padding:7px;
+    background-color:#444;
+    color:#eee;
+    border:1px solid #888;
 }
