--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #switch {
-    position: absolute;
-    right:21.5rem;
+    position: relative;
+    top: 20px;
     border-radius:20px;
     padding:7px;
     background-color:#444;
@@ -12,16 +12,16 @@
     text-align:center;
     font-family:Palatino Linotype;
     max-width:400px;
+    height:250px;
     margin:auto;
     padding:15px;
 }
 
 .boxparent {
-    display: flex;
+    position:relative;
+    display:flex;
+    justify-content: space-between;
     flex-wrap: wrap;
-    margin-left:16.5%;
-    margin-top: 2%;
-    width: 65%;
 }
 
 .textbox {
@@ -37,6 +37,8 @@
     outline: none;
     background-color:#222;
     color:white;
+    height:300px;
+    width:800px;
 }
 
 #entertext {
@@ -47,11 +49,560 @@
 }
 
 #input {
-    display:inline-block;
-    padding:10px;
+    position:relative;
+    left:120px;
 }
 
 #output {
     position:relative;
-    right:-16px;
+    right: 120px;
+}
+
+@media only screen and (max-width: 1915px) {
+    #switch {
+        position: relative;
+        top: 20px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        left:100px;
+    }
+
+    #output {
+        position:relative;
+        right: 100px;
+    }
+
+}
+
+@media only screen and (max-width:1875px) {
+        #switch {
+            position: relative;
+            top: 20px;
+            border-radius:20px;
+            padding:7px;
+            background-color:#444;
+            color:#eee;
+            border:1px solid #888;
+        }
+
+        #input {
+            position:relative;
+            left:10px;
+        }
+
+        #output {
+            position:relative;
+            right: 10px;
+        }
+}
+
+@media only screen and (max-width:1690px) {
+        #switch {
+            position: absolute;
+            top:20px;
+            border-radius:20px;
+            padding:7px;
+            background-color:#444;
+            color:#eee;
+            border:1px solid #888;
+        }
+
+        #input {
+            position:relative;
+            left:0px;
+        }
+
+        #output {
+            position:relative;
+            right: 0px;
+        }
+}
+
+@media only screen and (max-width:1670px) {
+        #switch {
+            position: relative;
+            top:20px;
+            border-radius:20px;
+            padding:7px;
+            background-color:#444;
+            color:#eee;
+            border:1px solid #888;
+        }
+
+        #input {
+            position:relative;
+            left:0px;
+        }
+
+        #output {
+            position:relative;
+            right: 0px;
+        }
+
+        .textbox {
+            font-size: .8rem;
+            letter-spacing:1px;
+            font-family: Palatino Linotype;
+            padding:10px;
+            line-height:1.5;
+            border: 1px solid #444;
+            border-radius: 5px;
+            box-shadow:1.25px 1.25px 1.25px #777;
+            resize: none;
+            outline: none;
+            background-color:#222;
+            color:white;
+            height:300px;
+            width:700px;
+        }
+}
+
+@media only screen and (max-width:1475px) {
+        #switch {
+            position: relative;
+            top:20px;
+            border-radius:20px;
+            padding:7px;
+            background-color:#444;
+            color:#eee;
+            border:1px solid #888;
+        }
+
+        #input {
+            position:relative;
+            left:0px;
+        }
+
+        #output {
+            position:relative;
+            right: 0px;
+        }
+
+        .textbox {
+            font-size: .8rem;
+            letter-spacing:1px;
+            font-family: Palatino Linotype;
+            padding:10px;
+            line-height:1.5;
+            border: 1px solid #444;
+            border-radius: 5px;
+            box-shadow:1.25px 1.25px 1.25px #777;
+            resize: none;
+            outline: none;
+            background-color:#222;
+            color:white;
+            height:265px;
+            width:600px;
+        }
+}
+
+@media only screen and (max-width:1270px) {
+        #switch {
+            position: relative;
+            top:20px;
+            border-radius:20px;
+            padding:7px;
+            background-color:#444;
+            color:#eee;
+            border:1px solid #888;
+        }
+
+        #input {
+            position:relative;
+            left:0px;
+        }
+
+        #output {
+            position:relative;
+            right: 0px;
+        }
+
+        .textbox {
+            font-size: .8rem;
+            letter-spacing:1px;
+            font-family: Palatino Linotype;
+            padding:10px;
+            line-height:1.5;
+            border: 1px solid #444;
+            border-radius: 5px;
+            box-shadow:1.25px 1.25px 1.25px #777;
+            resize: none;
+            outline: none;
+            background-color:#222;
+            color:white;
+            height:235px;
+            width:500px;
+        }
+}
+
+@media only screen and (max-width:1070px) {
+    #switch {
+        position: relative;
+        top:20px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        left:0px;
+    }
+
+    #output {
+        position:relative;
+        right: 0px;
+    }
+
+    .textbox {
+        font-size: .8rem;
+        letter-spacing:1px;
+        font-family: Palatino Linotype;
+        padding:10px;
+        line-height:1.5;
+        border: 1px solid #444;
+        border-radius: 5px;
+        box-shadow:1.25px 1.25px 1.25px #777;
+        resize: none;
+        outline: none;
+        background-color:#222;
+        color:white;
+        height:220px;
+        width:400px;
+    }
+}
+
+@media only screen and (max-width:870px) {
+     #switch {
+        position: relative;
+        top:-550px;
+        border-radius:20px;
+        padding:10px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+        font-size:20px;
+     }
+
+     #input {
+         position:relative;
+         left:10px;
+         bottom: 10px;
+     }
+
+     #output {
+         position:relative;
+         left: 10px;
+     }
+
+     .textbox {
+        font-size: .8rem;
+        letter-spacing:1px;
+        font-family: Palatino Linotype;
+        padding:10px;
+        line-height:1.5;
+        border: 1px solid #444;
+        border-radius: 5px;
+        box-shadow:1.25px 1.25px 1.25px #777;
+        resize: none;
+        outline: none;
+        background-color:#222;
+        color:white;
+        height:222px;
+        width:800px;
+    }
+}
+
+@media only screen and (max-width:845px) {
+    #switch {
+        position: relative;
+        top:-550px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    #output {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    .textbox {
+       font-size: .8rem;
+       letter-spacing:1px;
+       font-family: Palatino Linotype;
+       padding:10px;
+       line-height:1.5;
+       border: 1px solid #444;
+       border-radius: 5px;
+       box-shadow:1.25px 1.25px 1.25px #777;
+       resize: none;
+       outline: none;
+       background-color:#222;
+       color:white;
+       height:222px;
+       width:600px;
+    }
+}
+
+@media only screen and (max-width:730px) {
+    #switch {
+        position: relative;
+        top:-550px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        left:3px;
+    }
+
+    #output {
+        position:relative;
+        left:3px;
+    }
+
+    .textbox {
+       font-size: .8rem;
+       letter-spacing:1px;
+       font-family: Palatino Linotype;
+       padding:10px;
+       line-height:1.5;
+       border: 1px solid #444;
+       border-radius: 5px;
+       box-shadow:1.25px 1.25px 1.25px #777;
+       resize: none;
+       outline: none;
+       background-color:#222;
+       color:white;
+       height:222px;
+       width:600px;
+    }
+}
+
+@media only screen and (max-width:660px) {
+    #switch {
+        position: relative;
+        top:-550px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    #output {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    .textbox {
+       font-size: .8rem;
+       letter-spacing:1px;
+       font-family: Palatino Linotype;
+       padding:10px;
+       line-height:1.5;
+       border: 1px solid #444;
+       border-radius: 5px;
+       box-shadow:1.25px 1.25px 1.25px #777;
+       resize: none;
+       outline: none;
+       background-color:#222;
+       color:white;
+       height:222px;
+       width:500px;
+    }
+}
+
+@media only screen and (max-width:560px) {
+    #switch {
+        position: relative;
+        top:-470px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    #output {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    .textbox {
+       font-size: .8rem;
+       letter-spacing:1px;
+       font-family: Palatino Linotype;
+       padding:10px;
+       line-height:1.5;
+       border: 1px solid #444;
+       border-radius: 5px;
+       box-shadow:1.25px 1.25px 1.25px #777;
+       resize: none;
+       outline: none;
+       background-color:#222;
+       color:white;
+       height:185px;
+       width:350px;
+    }
+}
+
+@media only screen and (max-width:400px) {
+    #switch {
+        position: relative;
+        top:-470px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    #output {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    .textbox {
+       font-size: .8rem;
+       letter-spacing:1px;
+       font-family: Palatino Linotype;
+       padding:10px;
+       line-height:1.5;
+       border: 1px solid #444;
+       border-radius: 5px;
+       box-shadow:1.25px 1.25px 1.25px #777;
+       resize: none;
+       outline: none;
+       background-color:#222;
+       color:white;
+       height:185px;
+       width:300px;
+    }
+}
+
+@media only screen and (max-width:375px) {
+    #switch {
+        position: relative;
+        top:-470px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    #output {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    .textbox {
+       font-size: .8rem;
+       letter-spacing:1px;
+       font-family: Palatino Linotype;
+       padding:10px;
+       line-height:1.5;
+       border: 1px solid #444;
+       border-radius: 5px;
+       box-shadow:1.25px 1.25px 1.25px #777;
+       resize: none;
+       outline: none;
+       background-color:#222;
+       color:white;
+       height:185px;
+       width:250px;
+    }
+}
+
+@media only screen and (max-width:330px) {
+    #switch {
+        position: relative;
+        top:-470px;
+        border-radius:20px;
+        padding:7px;
+        background-color:#444;
+        color:#eee;
+        border:1px solid #888;
+    }
+
+    #input {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    #output {
+        position:relative;
+        margin-right:auto;
+        margin-left:auto;
+    }
+
+    .textbox {
+       font-size: .8rem;
+       letter-spacing:1px;
+       font-family: Palatino Linotype;
+       padding:10px;
+       line-height:1.5;
+       border: 1px solid #444;
+       border-radius: 5px;
+       box-shadow:1.25px 1.25px 1.25px #777;
+       resize: none;
+       outline: none;
+       background-color:#222;
+       color:white;
+       height:185px;
+       width:200px;
+    }
 }
